--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
     "dev:server": "node server/index.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.8.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.90.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "sonner": "^2.0.7",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
