--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.90.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "zod": "^4.0.17"
   },
