--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "i18next": "^25.3.5",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.6.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
     "redux-persist": "^6.0.0",
