--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dev:server": "node server/index.js"
+    "dev:server": "node server/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
@@ -30,7 +30,6 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.6.1",
-    "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.90.0",
@@ -40,14 +39,30 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.32.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux-mock-store": "^1.5.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "babel-jest": "^30.0.5",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "react-redux": "^9.2.0",
+    "redux-mock-store": "^1.5.5",
+    "ts-jest": "^29.4.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0"
